app/javascript/src/styles/common/navigation.scss
nav.navigation {
  display: grid;
  grid-template-areas: "logo logo controls";
  grid-template-columns: min-content auto;
  grid-template-rows: min-content min-content min-content min-content auto;

  width: 100%; // otherwise narrow when fixed
  z-index: 20; // otherwise post labels layered above
  position: relative;


  /* Top bar, always visible */
  .nav-logo {
    grid-area: logo;

    background-color: themed("color-background");
    height: 3.75rem;

    a.nav-logo-link {
      display: flex;
      box-sizing: border-box;

      // Height: 3.75rem
      // - padding  0.125 * 2 = 0.25
      // - image                3.5
      height: 3.5rem;
      width: 4rem;
      margin: 0.125rem;
  
      background-image: url("main-logo.svg");
      background-repeat: no-repeat;
      background-size: contain;
      background-position-y: center;
    }
  }

  .nav-controls {
    grid-area: controls;

    display: flex;
    flex-flow: row-reverse;
    align-items: center;

    font-size: 1.15rem;
    background-color: themed("color-background");
    padding-right: 0.25rem;
    height: 3.75rem;

    //   Height: 3.75rem
    // - link padding     0.625  * 2 = 1.25
    // - internal size                 2.5
    & > a {
      display: flex;
      padding: 0.625rem 0.5rem;

      & > span {
        display: flex;
        justify-content: center;
        align-items: center;
        box-sizing: border-box;
        gap: 0.5rem;
        
        height: 2.5rem;
        min-width: 2.5rem;
        line-height: 1.5rem;
        padding: 0 0.5rem;

        background: themed("color-foreground");
        color: themed("color-link-active");
        border-radius: 0.25rem;
        white-space: nowrap;

        i { font-size: 1.5rem; }
      }

      &:hover > span, &:active > span { background: themed("color-section"); }
      &:focus { outline: none; }
    }

    a.simple-avatar {
      .simple-avatar-button {
        padding: 0;
        gap: 0;

        .simple-avatar-name {
          padding: 0.5rem;

          @include window-smaller-than(32rem) {
            display: none;
          }
        }

        .simple-avatar-image {
          display: flex;
          justify-content: center;
          align-items: center;
          position: relative;

          width: 2.5rem;
          height: 2.5rem;
    
          box-sizing: border-box;
          border-radius: 0.25rem;
          background: var(--color-section);

          img {
            width: 2.5rem;
            height: 2.5rem;

            border-radius: 0.25rem;
            object-fit: cover;

            z-index: 1; // above the letter
          }

          &::before {
            content: attr(data-name);
            position: absolute;
            font-size: 1.5rem;
          }
        }
      }
    }
  }

  /* Offset elements on the left and bottom */
  // Needed to track clicks outside the menu area
  @each $name in ("left", "bott") {
    .nav-offset-#{$name} {
      grid-area: off#{$name};
      display: none; // flex
      background: #00000050;
    }
  }

  /* Toggled menus, hidden by default */
  // Naming areas
  @each $name in (primary, secondary, tools, help) {
    .nav-#{$name} {
      grid-area: $name;
      display: none;

      li {
        padding: 0;

        & > a {
          display: flex;
          align-items: center;
          gap: 0.5rem;

          white-space: nowrap;

          i {
            width: 1.5rem;
            color: themed("color-link-active");
            text-align: center;
          }
        }
      }
    }
  }

  // Common top
  .nav-primary, .nav-secondary {
    flex-flow: column;

    // Prevent the tools / help buttons from being pushed
    // way too low on pages with a lot of secondary links
    height: 422px;
    overflow-y: scroll;

    li a {
      justify-content: start;
    }
  }

  .nav-primary {
    background-color: themed("color-section");
    font-size: 1.25rem;

    li > a {
      border-bottom: 1px solid themed("color-foreground");
      line-height: 1.25rem;
      padding: 1rem 0.5rem;
    }
    li.current a { background-color: themed("color-foreground"); }
  }

  .nav-secondary {
    background-color: themed("color-foreground");
    font-size: 1.2rem;

    li {
      & > a {
        border-bottom: 1px solid themed("color-section");
        line-height: 1.2rem;
        padding: 0.7rem;

        white-space: wrap; // forum menus are long
      }

      &.divider {
        border-bottom: 1px solid themed("color-section");
        height: 0.25rem;
      }

      form input[type="text"] {
        width: 100%;
        box-sizing: border-box;

        font-size: 1.25rem;
        padding: 0.5rem 0.5rem;
      }
    }
  }

  // Common bottom
  .nav-tools, .nav-help {
    grid-template-rows: min-content;
    font-size: 1.1rem;

    padding: 1rem;
    gap: 1rem;

    background-color: themed("color-section");

    li > a {
      justify-content: center;
      border-radius: 0.25rem;

      padding: 0.7rem 1rem;
      line-height: 1.1rem;
    }
  }

  .nav-tools {
    grid-template-columns: 1fr 1fr;
    border-top: 1px solid themed("color-foreground");

    li {
      a { background: themed("color-section-lighten-5"); }
      &.nav-tools-login { grid-column: 1 / -1; }
    }

    &.anonymous li.nav-tools-themes {
      grid-column: 1 / -1;
    }
  }

  .nav-help {
    grid-template-columns: 1fr 1fr 1fr;

    li {
      a { background: themed("color-section-darken-5"); }
      &.nav-help-discord,
      &.nav-help-subscribestar {
        grid-column: 1 / -1;
      }

      & > a img {
        height: 1.5rem;
        margin: -0.2rem 0;
      }

      // Hack to put the wiki/help links before discord/sstar on mobile
      // but still have "more" at the end on desktop
      &#nav-more {
        grid-row: 1;
        grid-column: 3;
      }
    }
  }
}


// Sticky header
body[data-th-sheader="true"] nav.navigation {
  position: sticky;
  top: 0;
}
/* ... */

